add padding/margin to elements around tables, .row class and paragraphs. Restyle tables with dark striped backgrounds and a border, for clarity.

--- a/openstack_dashboard/themes/ubuntu/_variables.scss
+++ b/openstack_dashboard/themes/ubuntu/_variables.scss
@@ -12,3 +12,6 @@ $brand-primary: $brand-color;
 
 $nav-active-color: #b83a10;
 $nav-hover-color: #e1662f;
+
+$table-bg: #efefef;
+//$table-border-color:
