--- a/openstack_dashboard/themes/ubuntu/_styles.scss
+++ b/openstack_dashboard/themes/ubuntu/_styles.scss
@@ -8,11 +8,31 @@ body,
   font-weight: 300;
 }
 
+p {
+  margin: 10px 0;
+}
+
 a,
 a:link,
 a:visited {
   color: $brand-color;
 }
+
+.row {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+table {
+  background-color: $table-bg;
+  border: 1px solid #ddd;
+}
+
+.table_actions {
+  margin-bottom: 10px;
+}
+
+
 
 .topbar,
 .topbar .switcher_bar .btn.btn-topnav,
@@ -123,6 +143,7 @@ a:visited {
       box-shadow: 0px 1px 3px 1px rgba(51,51,51,0.2);
       -moz-box-shadow: 0px 1px 3px 1px rgba(51,51,51,0.2);
       -webkit-box-shadow: 0px 1px 3px 1px rgba(51,51,51,0.2);
+      max-width: 500px;
       padding-bottom: 40px;
       padding-top: 80px;
       position: relative;
@@ -141,6 +162,11 @@ a:visited {
         text-indent: 115px;
         top: 20px;
         width: 100%;
+      }
+
+      .horizontal-center {
+        margin: 0;
+        width: auto;
       }
     }
 }
