--- a/openstack_dashboard/themes/ubuntu/_styles.scss
+++ b/openstack_dashboard/themes/ubuntu/_styles.scss
@@ -144,9 +144,13 @@ table {
       -moz-box-shadow: 0px 1px 3px 1px rgba(51,51,51,0.2);
       -webkit-box-shadow: 0px 1px 3px 1px rgba(51,51,51,0.2);
       max-width: 500px;
-      padding-bottom: 40px;
-      padding-top: 80px;
+      padding-bottom: 20px;
+      padding-top: 60px;
       position: relative;
+
+      .splash-logo {
+        display: none;
+      }
 
       &:after {
         background-image: url("/static/themes/ubuntu/img/logo-ubuntu-orange.svg");
@@ -160,7 +164,7 @@ table {
         line-height: 1.7em;
         position: absolute;
         text-indent: 115px;
-        top: 20px;
+        top: 25px;
         width: 100%;
       }
 
